@@ -65,7 +65,7 @@ ggtitle <- function(label) {
 # Convert aesthetic mapping into text labels
 make_labels <- function(mapping) {
   remove_dots <- function(x) {
-    gsub("\\.\\.([a-zA-z._]+)\\.\\.", "\\1", x)
+    gsub(.calculated_aes_regex, "\\1", x)
   }
 
   lapply(mapping, function(x) remove_dots(deparse(x)))
