@@ -7,6 +7,9 @@ ggplot2 0.9.3.1.99
 * `ggpcp()`, `ggfluctuation()`, `ggmissing()`, `ggstructure()`, and
   `ggorder()` are now defunct and have been removed.
 
+* `aes()` no more treats variables like `a..x..b as a calculated aesthetic.
+  (@krlmlr, #834.)
+
 
 ggplot2 0.9.3.1
 ----------------------------------------------------------------
